RESOLVED FIXED263479
REGRESSION(267683@main): [ iOS ] platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html is a consistent text failure
https://bugs.webkit.org/show_bug.cgi?id=263479
Summary REGRESSION(267683@main): [ iOS ] platform/ios/mediastream/getUserMedia-overri...
Robert Jenner
Reported 2023-10-20 15:27:19 PDT
platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html is a flaky text failure that is very consistent on iOS. It fails more frequently than it passes. HISTORY: https://results.webkit.org/?suite=layout-tests&test=platform%2Fios%2Fmediastream%2FgetUserMedia-override-audio-session-interruption.html TEXT DIFF: -PASS call getUserMedia, stop, interrupt and recall getUserMedia +FAIL call getUserMedia, stop, interrupt and recall getUserMedia assert_true: test after system interruption expected true got false DIFF URL: https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/269576@main%20(258)/platform/ios/mediastream/getUserMedia-override-audio-session-interruption-pretty-diff.html
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-20 15:27:50 PDT
Robert Jenner
Comment 2 2023-10-20 15:30:19 PDT
I was able to very easily reproduce this failure on iOS17 ToT Release ToT running the test as follows: run-webkit-tests --ios-simulator platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html --iterations 10 --child-process=1 --force It fails almost every single time. I was also able to bisect this to a specific regression point. This passes when ran up-to 1000 iterations at 267682@main, but fails with less than 10 iterations at 267683@main Will be marking expectations below.
Robert Jenner
Comment 3 2023-10-20 15:49:12 PDT
I have put up a PR for expectations on this test here: https://github.com/WebKit/WebKit/pull/19375 But it seems to be slow/lagging on landing. Will forward this bug, and update when the expectation lands.
EWS
Comment 4 2023-10-20 16:07:22 PDT
Test gardening commit 269601@main (22c0e587abf7): <https://commits.webkit.org/269601@main> Reviewed commits have been landed. Closing PR #19375 and removing active labels.
youenn fablet
Comment 5 2023-10-27 03:26:16 PDT
EWS
Comment 6 2023-10-27 10:02:03 PDT
Committed 269855@main (068189b33d98): <https://commits.webkit.org/269855@main> Reviewed commits have been landed. Closing PR #19631 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.