REGRESSION(267683@main): [ iOS ] platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html is a consistent text failure https://bugs.webkit.org/show_bug.cgi?id=263479 rdar://problem/117282117

Reviewed by Eric Carlson.

In 267683@main, we added support for failing tryToSetActivate in case of interruption like happens in a phone call.
This broke this test which expects to end interruption in case of calling getUserMedia and phone call is ended (but we did not receive the end interruption).
To be able to test this case, we are introducing a new internals API that clears the interruption flag, which will allow tryToSetActivate to succeed.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/mediastream/getUserMedia-override-audio-session-interruption.html:
* Source/WebCore/platform/audio/AudioSession.h:
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::clearAudioSessionInterruptionFlag):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:
* Source/WebKit/WebProcess/GPU/media/RemoteAudioSession.h:

Canonical link: https://commits.webkit.org/269855@main